# Huawei

Complex/: .gitignore  Launch  Makefile  TODO  a.out  complex.cpp  complex.hpp  main  main.cpp  test
Complex/include/: complex.hpp
Complex/source/: complex.cpp
Complex/tests/: test.cpp  test.hpp
Dictionary/: .clang-tidy  CMakeLists.txt
Dictionary/dictionary/: CMakeLists.txt
Dictionary/dictionary/include/Dictionary/: dictionary.hpp
Dictionary/dictionary/include/HashTable/: hashtable.hpp  hashtable_impl.hpp
Dictionary/dictionary/include/List/: list.hpp  list_impl.hpp
Dictionary/dictionary/tests/: CMakeLists.txt
Queue/: CMakeLists.txt
Queue/benchmark/: CMakeLists.txt  queue_list_bench.cpp  queue_stack_bench.cpp
Queue/list_version/include/: queue.hpp  queue_impl.hpp
Queue/queue/: CMakeLists.txt
Queue/queue/benchmark/: CMakeLists.txt  queue_list_bench.cpp  queue_stack_bench.cpp
Queue/queue/include/list_version/: queue.hpp  queue_impl.hpp
Queue/queue/include/stack_version/: queue.hpp  queue_impl.hpp
Queue/queue/tests/: CMakeLists.txt  gtest.cpp
Queue/stack/: .clang-tidy  CMakeLists.txt
Queue/stack/bench/: CMakeLists.txt
Queue/stack/include/: stack-impl.hpp  stack.hpp
Queue/stack/tests/: CMakeLists.txt  gtest.cpp
Queue/stack_version/include/: queue.hpp  queue_impl.hpp
Queue/tests/: CMakeLists.txt  gtest.cpp
Stack/: .CMakeLists.txt.swp  .clang-format  .clang-tidy  CMakeLists.txt  Launch  Makefile  TODO  clang-format.cmake  main.cpp  stack  stack.cpp  stack.hpp  test
Stack/bench/: CMakeLists.txt  bench.cpp
Stack/include/: stack-impl.hpp  stack.hpp
Stack/source/: stack.cpp  stack_bool.cpp  test.cpp
Stack/tests/: CMakeLists.txt  gtest.cpp  test.cpp
Tree/: .clang-format  .gitignore  CMakeLists.txt  TODO.txt
Tree/tree/: CMakeLists.txt
Tree/tree/include/: tree.hpp  tree_impl.hpp
Tree/tree/tests/: CMakeLists.txt  gtest.cpp
